--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "css-loader": "^5.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "style-loader": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -41,11 +43,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.2",
     "node-fetch": "^2.6.0",
     "react-test-renderer": "^16.13.1",
-    "webpack": "^4.44.1",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
